--- a/index.css
+++ b/index.css
@@ -12,14 +12,13 @@ h1{ display: block; padding-left: 20px;padding-top: 20px;}
 #contacts-table td { color: #000; }
 #contacts-table tr:nth-child(2n) { background: #E8EDFF; }
 
-#contacts-form { padding: 10px; background-color:rgb(252, 230, 109)}
+#contacts-form { padding: 10px; background-color:rgb(252, 230, 109);padding-left: 50px}
 .text input, .button input { padding: 5px; margin: 0; border: 1px solid #ccc; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
 #contacts-form .item { margin: 3px 0; }
 #contacts-form label, #contacts-form .field { display: inline-block; color: #0C0B07; }
-#contacts-form label { width: 110px; font-weight: bold; text-align: right; color: #666; }
+#contacts-form label { width: 100px; font-weight: bold; text-align: right; color: #666; }
 #contacts-form .text input { width: 176px; padding: 3px; }
 #contacts-form .button { display: inline-block; }
-#contacts-form .button-wrapper { padding-left: 113px; }
+#contacts-form .button-wrapper { padding-left: 180px; ;}
 .button input { padding: 4px 8px; color: #343434; background-color: #fdfdfd; background: -moz-linear-gradient(#fdfdfd, #e1e1e1); background: -webkit-gradient(linear, 0 0, 0 100%, from(#fdfdfd), to(#e1e1e1)); }
 .button-default input { font-weight: bold; color: #fff; background-color: #7ca0c7; background: -moz-linear-gradient(#acc6e1, #7ca0c7); background: -webkit-gradient(linear, 0 0, 0 100%, from(#acc6e1), to(#7ca0c7)); border-color: #5b80b2; }
-.button-wrapper{ text-align: left; }
