--- a/index.css
+++ b/index.css
@@ -1,24 +1,118 @@
-.header{background-color: rgb(252, 119, 119);width: 540px}
-a { color: #0068D2; cursor: pointer; }
-a:link, a:visited { text-decoration: none; color: #0068D2; }
-a:hover, a:active { text-decoration: underline; color: #0068D2; }
-body { font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", sans-serif; width: 540px}
-h1{ display: block; padding-left: 20px;padding-top: 20px;}
-.search-class{padding-left: 300px;}
+.header {
+  background-color: rgb(252, 119, 119);
+  width: 540px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+a {
+  color: #0068d2;
+  cursor: pointer;
+}
+a:link,
+a:visited {
+  text-decoration: none;
+  color: #0068d2;
+}
+a:hover,
+a:active {
+  text-decoration: underline;
+  color: #0068d2;
+}
+body {
+  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+  width: 540px;
+  margin: 10% 30%;
+}
+h1 {
+  display: block;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+.search-class {
+  padding-left: 300px;
+}
 
-#contacts-table { border-collapse: collapse; background-color: rgb(180, 248, 163);width: 540px}
-#contacts-table, #contacts-table th, #contacts-table td { padding: 8px 16px; text-align: left; border: 0px solid #B9BABE; }
-#contacts-table th { font-weight: bold; font-size: 14px; color: #29344B; }
-#contacts-table td { color: #000; }
-#contacts-table tr:nth-child(2n) { background: #E8EDFF; }
+#contacts-table {
+  border-collapse: collapse;
+  background-color: rgb(180, 248, 163);
+  width: 540px;
+}
+#contacts-table,
+#contacts-table th,
+#contacts-table td {
+  padding: 8px 16px;
+  text-align: left;
+  border: 0px solid #b9babe;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+#contacts-table th {
+  font-weight: bold;
+  font-size: 14px;
+  color: #29344b;
+}
+#contacts-table td {
+  color: #000;
+}
+#contacts-table tr:nth-child(2n) {
+  background: #e8edff;
+}
 
-#contacts-form { padding: 10px; background-color:rgb(252, 230, 109);padding-left: 50px}
-.text input, .button input { padding: 5px; margin: 0; border: 1px solid #ccc; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
-#contacts-form .item { margin: 3px 0; }
-#contacts-form label, #contacts-form .field { display: inline-block; color: #0C0B07; }
-#contacts-form label { width: 100px; font-weight: bold; text-align: right; color: #666; }
-#contacts-form .text input { width: 176px; padding: 3px; }
-#contacts-form .button { display: inline-block; }
-#contacts-form .button-wrapper { padding-left: 180px; ;}
-.button input { padding: 4px 8px; color: #343434; background-color: #fdfdfd; background: -moz-linear-gradient(#fdfdfd, #e1e1e1); background: -webkit-gradient(linear, 0 0, 0 100%, from(#fdfdfd), to(#e1e1e1)); }
-.button-default input { font-weight: bold; color: #fff; background-color: #7ca0c7; background: -moz-linear-gradient(#acc6e1, #7ca0c7); background: -webkit-gradient(linear, 0 0, 0 100%, from(#acc6e1), to(#7ca0c7)); border-color: #5b80b2; }
+#contacts-table tr {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+#contacts-form {
+  padding: 10px;
+  background-color: rgb(252, 230, 109);
+  padding-left: 50px;
+}
+.text input,
+.button input {
+  padding: 5px;
+  margin: 0;
+  border: 1px solid #ccc;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+#contacts-form .item {
+  margin: 3px 0;
+}
+#contacts-form label,
+#contacts-form .field {
+  display: inline-block;
+  color: #0c0b07;
+}
+#contacts-form label {
+  width: 100px;
+  font-weight: bold;
+  text-align: right;
+  color: #666;
+}
+#contacts-form .text input {
+  width: 176px;
+  padding: 3px;
+}
+#contacts-form .button {
+  display: inline-block;
+}
+#contacts-form .button-wrapper {
+  padding-left: 180px;
+}
+.button input {
+  padding: 4px 8px;
+  color: #343434;
+  background-color: #fdfdfd;
+  background: -moz-linear-gradient(#fdfdfd, #e1e1e1);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#fdfdfd), to(#e1e1e1));
+}
+.button-default input {
+  font-weight: bold;
+  color: #fff;
+  background-color: #7ca0c7;
+  background: -moz-linear-gradient(#acc6e1, #7ca0c7);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#acc6e1), to(#7ca0c7));
+  border-color: #5b80b2;
+}
